syntax = "proto3";

package pb;

import "transfer.proto";
import "account.proto";
import "entry.proto";

option go_package = "github.com/thanhquy1105/simplebank/pb";

message TransferRequest {
    int64 from_account_id = 1;
    int64 to_account_id = 2;
    int64 amount = 3;
    string currency = 4;
}

message TransferResponse {
    Transfer transfer = 1;
	Account from_account = 2;
	Account to_account = 3;
	Entry from_entry = 4;
	Entry to_entry = 5;
}